# backend/main.go
@@ -44,19 +44,38 @@ func main() {
 		stockRoutes.GET("/:id", controllers.GetStockByID)
 		stockRoutes.POST("", controllers.CreateStock)
 		stockRoutes.PUT("/:id", controllers.UpdateStock)
-		stockRoutes.DELETE("/:id", controllers.DeleteStock)
+		//stockRoutes.DELETE("/:id", controllers.DeleteStock)
 
 		stockRoutes.GET("/symbol/:symbol", controllers.GetStockBySymbol)
-		stockRoutes.DELETE("/symbol/:symbol", controllers.DeleteStockBySymbol)
+		//stockRoutes.DELETE("/symbol/:symbol", controllers.DeleteStockBySymbol)
+
+		stockRoutes.GET("/history", controllers.GetStockHistory)
 
 		stockDaily := v1.Group("/stock-daily-data")
 		{
 			stockDaily.GET("", controllers.GetAllStockDailyData)
 			stockDaily.GET("/:symbol", controllers.GetStockDailyData)
 			stockDaily.POST("", controllers.CreateStockDailyData)
-			stockDaily.DELETE("/:symbol", controllers.DeleteStockDailyData)
+			//stockDaily.DELETE("/:symbol", controllers.DeleteStockDailyData)
 		}
-
+		indicator := v1.Group("/stock-indicators")
+		{
+			indicator.POST("", controllers.CreateStockIndicator)
+			indicator.GET("", controllers.GetStockIndicators)
+			indicator.GET("/:id", controllers.GetStockIndicatorByID)
+			indicator.GET("/symbol/:symbol", controllers.GetStockIndicatorBySymbolAndDate)
+			indicator.PUT("/:id", controllers.UpdateStockIndicator)
+			//indicator.DELETE("/:id", controllers.DeleteStockIndicator)
+		}
+		flow := v1.Group("/stock-money-flow-all")
+		{
+			flow.POST("", controllers.CreateStockMoneyFlowAll)                           // 创建
+			flow.GET("", controllers.GetStockMoneyFlowAlls)                              // 获取全部
+			flow.GET("/:id", controllers.GetStockMoneyFlowAllByID)                       // 根据ID获取
+			flow.GET("/symbol/:symbol", controllers.GetStockMoneyFlowAllBySymbolAndDate) // 根据symbol+日期查询
+			flow.PUT("/:id", controllers.UpdateStockMoneyFlowAll)                        // 更新
+			flow.DELETE("/:id", controllers.DeleteStockMoneyFlowAll)                     // 删除
+		}
 	}
 
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
